--- a/style.css
+++ b/style.css
@@ -1,15 +1,13 @@
-.item1 { grid-area: header; }
-.item2 { grid-area: menu; }
-.item3 { grid-area: main; }
-.item4 { grid-area: right; }
-.item5 { grid-area: footer; }
-
+.item1 { grid-area: berries; }
+.item2 { grid-area: blueberry; }
+.item3 { grid-area: rasberry; }
+.item4 { grid-area: cowberry; }
 .grid-container {
   display: grid;
   grid-template-areas:
-    'header header header header header header'
-    'menu main main main right right'
-    'menu footer footer footer footer footer';
+    'berries blueberry'
+    'berries rasberry'
+    'berries cowberry';
   gap: 5px;
   background-color: #2196F3;
   padding: 3px;
