--- a/ourservices.css
+++ b/ourservices.css
@@ -15,6 +15,21 @@
     max-width: 100px;
     height: auto;
   }
+#auditpic{
+    margin:30px;
+    max-width: 100px;
+    height: auto;
+  }
+enviromentpic{
+    margin:30px;
+    max-width: 100px;
+    height: auto;
+  }
+riskpic{
+    margin:30px;
+    max-width: 100px;
+    height: auto;
+  }
  @media (max-width: 450px) {
     #phone {
         max-width: 120px;
