--- a/ourservices.css
+++ b/ourservices.css
@@ -1,35 +1,9 @@
-.contact {
-    margin-left: 100px;
-    margin-right: 100px;
-    list-style: none;
-    padding-left: 100px;
-    display:flex;
-    justify-content:center;
-    align-items: center;
-   
-  }
-  
- 
-  #phone {
+img {
     margin:30px;
     max-width: 100px;
     height: auto;
   }
-#auditpic{
-    margin:30px;
-    max-width: 100px;
-    height: auto;
-  }
-enviromentpic{
-    margin:30px;
-    max-width: 100px;
-    height: auto;
-  }
-riskpic{
-    margin:30px;
-    max-width: 100px;
-    height: auto;
-  }
+
  @media (max-width: 450px) {
     #phone {
         max-width: 120px;
