--- a/ourservices.css
+++ b/ourservices.css
@@ -1,9 +1,20 @@
-img {
+.contact {
+    margin-left: 100px;
+    margin-right: 100px;
+    list-style: none;
+    padding-left: 100px;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+   
+  }
+  
+ 
+  #phone {
     margin:30px;
     max-width: 100px;
     height: auto;
   }
-
  @media (max-width: 450px) {
     #phone {
         max-width: 120px;
