--- a/aboutus.css
+++ b/aboutus.css
@@ -1,13 +1,60 @@
-.aboutuspic{
-    width: 200px;
-	float: left;
-}
-h1{
-    padding-top: 100px;
-    text-align: center;
-}
-.aboutuscontent{
-    padding: 50px;
-    width: auto;
-    
-}
+.aboutus {
+    list-style: none;
+    padding-top: 150px;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+   
+  }
+  
+ 
+  #aboutpic {
+    max-width: 250px;
+    height: auto;
+  }
+ @media (max-width: 450px) {
+    #phone {
+        max-width: 120px;
+        height: auto;
+      }
+      .contactinfo {
+        inline-size: 150px;
+        overflow-wrap: break-word;
+      }
+
+      .contact {
+        list-style: none;
+        margin: 0;
+        padding: 5px;
+        padding-top: 50px;
+        display: flex;
+        justify-content:center;
+        align-items: center;
+        font-size: small;
+        
+       
+      }
+  }
+  @media (max-width: 300px) {
+    #phone {
+        max-width: 90px;
+        height: auto;
+      }
+      .contactinfo {
+        inline-size: 150px;
+        overflow-wrap: break-word;
+      }
+   .contact {
+        list-style: none;
+        margin: 0;
+        padding: 30px;
+        padding-top: 50px;
+        display:ruby-text;
+        justify-content:center;
+        align-items:center;
+        font-size:xx-small;
+        
+       
+      }
+  }
+  
