--- a/aboutus.css
+++ b/aboutus.css
@@ -1,6 +1,7 @@
 .aboutus {
     list-style: none;
-    padding-top: 50px;
+    padding-top: 20px;
+    margin:30px;
     display: flex;
     justify-content:center;
     align-items: center;
