--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
   color: white;
   }
 .navbar{
-  padding: auto;
+  padding: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
