--- a/our_customers.css
+++ b/our_customers.css
@@ -1,60 +1,5 @@
-.contact {
-    list-style: none;
-    padding-top: 150px;
-    display: flex;
-    justify-content:center;
-    align-items: center;
-   
-  }
-  
- 
-  #phone {
-    max-width: 250px;
-    height: auto;
-  }
- @media (max-width: 450px) {
-    #phone {
-        max-width: 120px;
-        height: auto;
-      }
-      .contactinfo {
-        inline-size: 150px;
-        overflow-wrap: break-word;
-      }
-
-      .contact {
-        list-style: none;
-        margin: 0;
-        padding: 5px;
-        padding-top: 50px;
-        display: flex;
-        justify-content:center;
-        align-items: center;
-        font-size: small;
+#care{
+    width:400px;
+    height:auto;
         
-       
-      }
-  }
-  @media (max-width: 300px) {
-    #phone {
-        max-width: 90px;
-        height: auto;
-      }
-      .contactinfo {
-        inline-size: 150px;
-        overflow-wrap: break-word;
-      }
-   .contact {
-        list-style: none;
-        margin: 0;
-        padding: 30px;
-        padding-top: 50px;
-        display:ruby-text;
-        justify-content:center;
-        align-items:center;
-        font-size:xx-small;
-        
-       
-      }
-  }
-  
+}
