--- a/our_customers.css
+++ b/our_customers.css
@@ -1,4 +1,7 @@
 #care{
+    display:flex;
+    justify-content:center;
+    align-items:center;
     justify-items:center;
     width:400px;
     height:auto;
