--- a/aboutus.css
+++ b/aboutus.css
@@ -7,16 +7,14 @@
     align-items: center;
    
   }
-  
- 
   #aboutpic {
     max-width: 250px;
     height: auto;
   }
+
  @media (max-width: 450px) {
     #phone {
-        max-width: 120px;
-        height: auto;
+        display:none
       }
       .contactinfo {
         inline-size: 150px;
@@ -38,8 +36,7 @@
   }
   @media (max-width: 300px) {
     #phone {
-        max-width: 90px;
-        height: auto;
+       display:none;
       }
       .contactinfo {
         inline-size: 150px;
