--- a/ourservices.css
+++ b/ourservices.css
@@ -36,7 +36,7 @@
         margin: 0;
         padding: 5px;
         padding-top: 50px;
-        display:list-item;
+        display:block;
         justify-content:center;
         align-items: center;
         font-size: small;
