--- a/aboutus.css
+++ b/aboutus.css
@@ -26,7 +26,7 @@
         margin: 0;
         padding: 5px;
         padding-top: 50px;
-        display: flex;
+        display: block;
         justify-content:center;
         align-items: center;
         font-size: small;
