--- a/ourservices.css
+++ b/ourservices.css
@@ -12,7 +12,7 @@
   }
   
  
-  #servicepic {
+  .servicepic {
     margin:30px;
     max-width: 100px;
     height: auto;
@@ -20,7 +20,7 @@
  
 
  @media (max-width: 450px) {
-    #servicepic {
+    .servicepic {
         max-width: 120px;
         height: auto;
         
@@ -45,7 +45,7 @@
       }
   }
   @media (max-width: 300px) {
-    #servicepic {
+    .servicepic {
         max-width: 90px;
         height: auto;
       }
